--- a/mymoja/mymoja/mymoja.csproj
+++ b/mymoja/mymoja/mymoja.csproj
@@ -62,6 +62,7 @@
     <Compile Include="History.xaml.cs">
       <DependentUpon>History.xaml</DependentUpon>
     </Compile>
+    <Compile Include="IWeatherServer.cs" />
     <Compile Include="WeatherServer.cs" />
     <Page Include="History.xaml">
       <SubType>Designer</SubType>
@@ -98,6 +99,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="file.eps" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
